--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "lib": "lib"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^4.1.8",
     "yargs": "^13.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^14.0.0-0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
