--- a/.github/workflows/daily-code-search.yml
+++ b/.github/workflows/daily-code-search.yml
@@ -1,7 +1,7 @@
 on: 
   schedule:
-  - cron: 0 0 * * 0
-name: Log and Publish
+  - cron: 0 0 * * *
+name: Daily Code Search Collection
 jobs:
   build:
     name: Build
@@ -18,7 +18,7 @@ jobs:
         GOOGLE_CREDENTIAL_B64: ${{ secrets.GOOGLE_CREDENTIAL_B64 }}
       with:
         entrypoint: node
-        args: cli.js go --output=logs
+        args: cli.js code-search go --output=logs
     - name: Publish Logs to Repo
       uses: mikeal/publish-to-github-action@master
       env:
