--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@google-cloud/bigquery": "^4.1.8",
+    "bent": "^6.0.3",
+    "parse-link-header": "^1.0.1",
     "yargs": "^13.3.0"
   },
   "devDependencies": {
