--- a/.github/workflows/daily-repo-search.yml
+++ b/.github/workflows/daily-repo-search.yml
@@ -9,33 +9,19 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: NPM Build
-      uses: actions/npm@master
-      with:
-        args: install
+      run: npm install
     - name: Collect Go Metrics 
-      uses: actions/npm@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        entrypoint: node
-        args: cli.js repo-search go --output=logs
+      run: node cli.js repo-search go --output=logs
     - name: Collect JS Metrics 
-      uses: actions/npm@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        entrypoint: node
-        args: cli.js repo-search javascript --output=logs
+      run: cli.js repo-search javascript --output=logs
     - name: Collect Google Trends 
-      uses: actions/npm@master
-      with:
-        entrypoint: node
-        args: cli.js trends --output=logs
+      run: node cli.js trends --output=logs
     - name: Re-write README
-      uses: actions/npm@master
-      with:
-        entrypoint: node
-        args: cli.js readme
+      run: node cli.js readme
     - name: Publish Logs to Repo
       uses: mikeal/publish-to-github-action@master
       env:
